--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,216 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+}
+/* var colors */
+
+:root{
+  --L-grey-bg: #F5F5F5;
+  --pearl-bg: #FBFCF8;
+  --primary-d-color: #2B283A;
+  --secondary-d-color: #4A4E74;
+  --primary-L-accent: #F47D27;
+  
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Typography */
+h1,h2{
+  font-weight: 700;
+}
+/* body, */
+.container{
+  /* background-color: var(--L-grey-bg); */
+}
+
+/* Navbar */
+header{
+  height: 90px;
+  padding: 20px;
+  border: 1px solid rgb(51, 153, 59);
+}
+
+.navBar,
+.logo-container,
+.navBar-row,
+.navBar-ul{
+  /* border: 1px solid rebeccapurple; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navBar{
+
+}
+.logo-container{
+
+}
+.logo {
+  width: 50px;
+  height: 50px;
+  margin-right:7px ;
+  border-radius: 50%;
+}
+.company-name{
+  font-size: 25px;
+  text-transform: uppercase;
+  
+}
+.navBar-row{
+  /* padding: 0 20px; */
+/* min-width: 500px; */
+}
+.navBar-ul{
+list-style: none;
+}
+
+.nav-li{
+  margin: 0 15px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.nav-link {
+ text-decoration: none;
+ color: #000000;
+}
+/* .nav-link:active,
+.nav-link:visited {
+  color: #00000080;
+  transition: color 0.3s;
+} */
+.nav-link:focus,
+.nav-link:hover {
+  color: #00000080;
+  transition: color 0.3s;
+}
+/*Simple css to style it like a toggle switch*/
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+
+.theme-switch {
+  display: inline-block;
+  height: 23px;
+  position: relative;
+  width: 50px;
+}
+
+.theme-switch input {
+  display:none;
+}
+
+.slider {
+  background-color: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 16px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 16px;
+}
+
+input:checked + .slider {
+  background-color: #000000;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* main content */
+.main-content,
+.card,
+.cardInfo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.main-content{
+  height: 90vh;
+  background-color: var(--pearl-bg);
+  
+}
+/* Digital card */
+
+.card {
+  border: 2px solid red;
+  width: 321px;
+  border-radius: 7px;
+
+  /* 317x780 */
+}
+
+/* headshot */
+.headshot{
+  width: 317px;
+  height: 317px;
+  object-fit: contain;
+}
+
+/* cardinfo */
+.card,
+.cardInfo{
+  flex-direction: column;
+
+}
+
+.cardInfo{
+padding: 20px 35px 31px ;
+}
+
+.card-title {
+  font-size: 25px;
+  line-height: 30.26px;
+  margin-bottom: 6px;
+
+}
+.card-title
+.info-header{
+color: var(--primary-d-color);
+}
+/* 400 fw add in to alla */
+
+.job-title{
+
+font-size: 13px;
+line-height: 15.5px;
+color: var(--primary-L-accent);
+margin-bottom: 9px;
+}
+
+.website{
+ text-decoration: none;
+ color: var(--secondary-d-color);
+ font-size: 10.5px;
+line-height: 15px;
+cursor: pointer;
+
 }
