--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,20 @@
   --secondary-d-color: #4A4E74;
   --primary-L-accent: #F47D27;
   --secondart-L-accent: #297FE5;
-  
+  --tertiary-L--grey: #D5D4D8;
+  --primary-icon-color : #918E9B;
 
 }
 
 /* Typography */
 h1,h2,h3{
   font-weight: 700;
+}
+a {
+   text-decoration: none;
+}
+li {
+  list-style: none;
 }
 /* body, */
 .container{
@@ -30,7 +37,7 @@ h1,h2,h3{
 header{
   height: 90px;
   padding: 20px;
-  border: 1px solid rgb(51, 153, 59);
+  border-bottom: 1px solid var(--tertiary-L--grey);
 }
 
 .navBar,
@@ -64,9 +71,9 @@ header{
   /* padding: 0 20px; */
 /* min-width: 500px; */
 }
-.navBar-ul{
+/* .navBar-ul{
 list-style: none;
-}
+} */
 
 .nav-li{
   margin: 0 15px;
@@ -75,7 +82,7 @@ list-style: none;
 }
 
 .nav-link {
- text-decoration: none;
+ cursor: pointer;
  color: #000000;
 }
 /* .nav-link:active,
@@ -163,10 +170,10 @@ input:checked + .slider:before {
 /* Digital card */
 
 .card {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   width: 321px;
-  border-radius: 7px;
-
+  border-radius: 7px ;
+background-color: var(--L-grey-bg);
   /* 317x780 */
 }
 
@@ -209,7 +216,7 @@ margin-bottom: 9px;
 }
 
 .website{
- text-decoration: none;
+
  color: var(--secondary-d-color);
  font-size: 10.5px;
 line-height: 15px;
@@ -233,19 +240,22 @@ margin-bottom: 17px;
   font-size: 14px;
   line-height: 16px;
   border-radius: 6px;
-  padding:9px 13px 9px 11px;
+  /* padding:9px 13px 9px 11px; */
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
   outline: none;
   border: none;
 }
 .contact-link{
-  text-decoration: none;
+  display: inline-block;
   width: 100%;
-  
-  background-color: red;
+  height: 100%;
+  padding:9px 13px 9px 11px;
+  /* background-color: red; */
 }
 .icon{
   margin-right:5px ;
+  margin-bottom: -2px;
 }
 
 .email-btn{
@@ -268,6 +278,14 @@ margin-bottom: 17px;
   background-color: var(--secondart-L-accent);
  
 }
+
+.linkedin-btn:focus,
+.linkedin-btn:hover{
+  background-color: #FFF;
+  border: 1px solid #D1D5DB;
+  transition: all 0.3s;
+}
+
 
 .email-btn > a {
   color: var(--primary-d-color);
@@ -292,7 +310,7 @@ margin-bottom: 17px;
 /* About me */
 
 .about-me{
-  margin-top: 25px;
+  margin: 25px 0 31px 0;
   width: 247px;
   height: 201px;
 }
@@ -310,4 +328,64 @@ margin-bottom: 17px;
 
 .info:first-of-type{
   margin-bottom: 27px;
+}
+
+/* .info:last-of-type{
+  margin-bottom: 27px;
+} */
+
+
+footer {
+  border-radius: 0px 0px 7px 7px;
+background-color: var(--tertiary-L--grey);
+width: 100%;
+padding: 19.5px 73px ;
+}
+.icon-row{
+  display:flex;
+  justify-content: space-between;
+  
+
+}
+.footer-li {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+}
+.footer-link{
+width: 100%;
+height: 30px;
+color: var(--primary-icon-color);
+
+}
+.footer-icon{
+  width: 30px;
+  height: 30px;
+}
+
+/* Social links hover */
+
+.twitter:hover,
+.twitter:focus {
+color: #1DA1F2;
+transition: color 0.3s;
+}
+
+.facebook:hover,
+.facebook:focus {
+color: #4267B2;
+transition: color 0.3s;
+}
+
+
+.insta:hover,
+.insta:focus {
+color: #E1306C;
+transition: color 0.3s;
+}
+
+.git:hover,
+.git:focus {
+color: #6e5494;
+transition: color 0.3s;
 }
