--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,9 @@
 }
 
 .white-content {
-  background: #e4e4e4;
-}
+  background: #23252C;
 
+}
 /* Typography */
 h1,h2,h3{
   font-weight: 700;
@@ -33,9 +33,9 @@ li {
   list-style: none;
 }
 /* body, */
-.container{
-  /* background-color: var(--L-grey-bg); */
-}
+/* .container{
+  background-color: var(--L-grey-bg);
+} */
 
 /* Navbar */
 header{
@@ -53,13 +53,13 @@ header{
   justify-content: space-between;
   align-items: center;
 }
-
+/* 
 .navBar{
 
 }
 .logo-container{
 
-}
+} */
 .logo {
   width: 50px;
   height: 50px;
@@ -71,10 +71,10 @@ header{
   text-transform: uppercase;
   
 }
-.navBar-row{
-  /* padding: 0 20px; */
-/* min-width: 500px; */
-}
+/* .navBar-row{
+  padding: 0 20px;
+  min-width: 500px;
+} */
 /* .navBar-ul{
 list-style: none;
 } */
@@ -168,13 +168,13 @@ input:checked + .slider:before {
 
 .main-content{
   height: 90vh;
-  background-color: var(--pearl-bg);
+  /* background-color: var(--pearl-bg); */
   
 }
 /* Digital card */
 
 .card {
-  /* border: 2px solid red; */
+
   width: 321px;
   border-radius: 7px ;
 background-color: var(--L-grey-bg);
@@ -183,9 +183,10 @@ background-color: var(--L-grey-bg);
 
 /* headshot */
 .headshot{
-  width: 317px;
+
+  width: 100%;
   height: 317px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 /* cardinfo */
